<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizFragment">

    <TextView
        android:id="@+id/quiz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_medium"
        android:text="@string/quiz_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_questions"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quiz_title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                style="@style/questionsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_01" />

            <RadioGroup
                android:id="@+id/radiogroup_answers_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radiobutton_answer_01_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_01_01" />

                <RadioButton
                    android:id="@+id/radiobutton_answer_01_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_01_02" />

                <RadioButton
                    android:id="@+id/radiobutton_answer_01_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_01_03" />

                <RadioButton
                    android:id="@+id/radiobutton_answer_01_04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_01_04" />
            </RadioGroup>

            <TextView
                style="@style/questionsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_02" />

            <RadioGroup
                android:id="@+id/radiogroup_answers_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radiobutton_answer_02_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_02_01" />

                <RadioButton
                    android:id="@+id/radiobutton_answer_02_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_02_02" />

                <RadioButton
                    android:id="@+id/radiobutton_answer_02_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_02_03" />

                <RadioButton
                    android:id="@+id/radiobutton_answer_02_04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_02_04" />
            </RadioGroup>

            <TextView
                style="@style/questionsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_03" />

            <RadioGroup
                android:id="@+id/radiogroup_answers_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radiobutton_answer_03_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_03_01" />

                <RadioButton
                    android:id="@+id/radiobutton_answer_03_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_03_02" />

                <RadioButton
                    android:id="@+id/radiobutton_answer_03_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_03_03" />

                <RadioButton
                    android:id="@+id/radiobutton_answer_03_04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_03_04" />
            </RadioGroup>

            <TextView
                style="@style/questionsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_04" />

            <RadioGroup
                android:id="@+id/radiogroup_answers_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radiobutton_answer_04_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_04_01" />

                <RadioButton
                    android:id="@+id/radiobutton_answer_04_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_04_02" />

                <RadioButton
                    android:id="@+id/radiobutton_answer_04_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_04_03" />

                <RadioButton
                    android:id="@+id/radiobutton_answer_04_04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_04_04" />
            </RadioGroup>

            <Button
                android:id="@+id/button_send_answers"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:text="@string/button_send"
                app:layout_constraintEnd_toEndOf="@id/scroll_questions"
                app:layout_constraintStart_toStartOf="@id/scroll_questions"
                app:layout_constraintTop_toBottomOf="@id/radiogroup_answers_04" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>